[package]
name = "nlwkn"
version = "1.0.0"
edition = "2021"
rust-version = "1.65"
publish = false

[lib]
path = "lib/src/lib.rs"

[[bin]]
name = "cadenza-pdf-fetcher"
path = "fetcher/src/main.rs"

[[bin]]
name = "cadenza-pdf-parser"
path = "parser/src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# reading xlsx
calamine = { version = "0.21", features = ["dates"] }

# reading pdf
lopdf = "0.31"

# data serialization
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_json = "1"

# cli
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# utility
const_format = "0.2"
static-toml = "1"
portpicker = "0.1"
lazy_static = "1"
regex = "1"
itertools = "0.11"

# error handling
anyhow = "1"

# http requests
[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "socks"]

# tor connection
[dependencies.arti]
version = "1"
default-features = false
features = [
    "tokio",
    "compression",
    "rustls",
    "experimental-api",
    "static-sqlite"
]

[dependencies.arti-client]
version = "0.9"
default-features = false
features = [
    "tokio",
    "compression",
    "rustls",
    "experimental",
    "experimental-api",
    "static-sqlite"
]

[dependencies.tor-rtcompat]
version = "0.9"
default-features = false
features = [
    "tokio",
    "rustls"
]
